<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_box"
            android:title="@string/view_profile" />
        <item
            android:id="@+id/nav_report_bug"
            android:icon="@drawable/ic_bug_report_black_24dp"
            android:title="@string/report_bug" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_mail_outline_black_24dp"
            android:title="@string/contact_us" />
    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_what_anime_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/what_anime_settings" />
            <item
                android:id="@+id/nav_app_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/app_settings" />
        </menu>
    </item>

</menu>
