<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/bnv_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/bnv_search" />

    <item
        android:id="@+id/navigation_quick_update"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:title="@string/bnv_quick_update" />


    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_none_black_24dp"
        android:title="@string/bnv_notifications" />

    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_playlist_add_check_black_24dp"
        android:title="@string/bnv_library" />
</menu>
