<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_close_changelog"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:tint="@color/colorPrimary"
        app:srcCompat="@drawable/ic_close" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_changelog"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_close_changelog"
        android:layout_marginBottom="@dimen/space_between_views"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginStart="@dimen/activity_margin"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/skip_login" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_description_changelog"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title_changelog"
        android:layout_marginBottom="@dimen/space_between_views"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginStart="@dimen/activity_margin"
        android:text="@string/skip_login_msg" />

    <Button
        android:id="@+id/yesBtnDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_description_changelog"
        android:layout_marginBottom="@dimen/space_between_views"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginStart="@dimen/activity_margin"
        android:text="@string/dialog_yes" />

    <Button
        android:id="@+id/noBtnDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/yesBtnDialog"
        android:layout_below="@id/tv_description_changelog"
        android:layout_marginBottom="@dimen/space_between_views"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginStart="@dimen/activity_margin"
        android:text="@string/dialog_no" />

</RelativeLayout>